--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.4</version>
                 <configuration>
-                    <mainClass>org.example.App</mainClass>
+                    <mainClass>org.org.example.example.org.example.example.App</mainClass>
                 </configuration>
             </plugin>
         </plugins>
